Fix Vendor detail page. Layout spacing, button text, and form placement issues.

--- a/resources/css/scss/base/_forms.scss
+++ b/resources/css/scss/base/_forms.scss
@@ -429,12 +429,25 @@ ul.gform_fields  {
         margin-bottom: 10px;
         padding: 16px;
         border-radius:0;
-        border: 2px solid #DB323F;       
-        transition: all 0.3s ease;     
+        border: 2px solid #DB323F;
+        transition: all 0.3s ease;
+				margin-top: 8px;
 
         &:hover {
             background-color:  #DB323F;
         }
+
+				@include media(max-width, 1280px) {
+					padding: 16px 0;
+				}
+
+				button {
+					padding: 0;
+
+					@include media(max-width, 1100px) {
+						font-size: 14px;
+					}
+				}
         
     }
 
